--- a/src/main/resources/static/휴가신청서.html
+++ b/src/main/resources/static/휴가신청서.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>연차/반차 신청서</title>
+    <title>휴가 신청서</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -24,34 +24,8 @@
             margin-bottom: 20px;
             font-size: 24px;
         }
-        .approval-table-container {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-        }
-        .approval-table {
-            width: 200px;
-            border: 1px solid #000;
-            border-collapse: collapse;
-        }
-        .approval-table th, .approval-table td {
-            border: 1px solid #000;
-            padding: 8px;
-            text-align: center;
-            font-size: 10px;
-        }
-        .approval-table th {
-            background-color: #e9e9e9;
-        }
-        .approval-table .approval-label {
-            writing-mode: vertical-rl;
-            transform: rotate(180deg);
-            text-align: center;
-            font-size: 12px;
-            font-weight: bold;
-        }
         .section {
-            margin-bottom: 20px;
+            margin-bottom: 15px;
             display: flex;
             align-items: center;
         }
@@ -59,12 +33,9 @@
             display: inline-block;
             width: 100px;
             font-weight: bold;
-            vertical-align: top;
         }
         .section input[type="text"], 
-        .section input[type="date"],
-        .section input[type="time"],
-        .section select,
+        .section input[type="date"], 
         .section textarea {
             flex: 1;
             padding: 8px;
@@ -101,6 +72,29 @@
             border-bottom: 1px solid #000;
             text-align: center;
         }
+        .approval-table {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            border: 1px solid #000;
+            border-collapse: collapse;
+            width: 200px;
+            background-color: #f9f9f9;
+        }
+        .approval-table th, .approval-table td {
+            border: 1px solid #000;
+            padding: 4px;
+            text-align: center;
+            font-size: 10px;
+        }
+        .approval-table th {
+            background-color: #e9e9e9;
+        }
+        .approval-table input[type='text']{
+            width: 100%;
+            box-sizing: border-box;
+            padding: 2px;
+        }
     </style>
     <script>
         function setDate() {
@@ -108,20 +102,22 @@
             const year = today.getFullYear();
             const month = ('0' + (today.getMonth() + 1)).slice(-2);
             const day = ('0' + today.getDate()).slice(-2);
-            document.getElementById('current-date').innerText = `${year} 년 ${month} 월 ${day} 일`;
+            document.getElementById('current-date').innerText = `${year}년 ${month}월 ${day}일`;
         }
         window.onload = setDate;
     </script>
 </head>
 <body>
     <div class="container">
-        <h1>연차 / 반차 신청서</h1>
+        <table class="approval-table">
+        </table>
+        <h1>휴가 신청서</h1>
         <div class="section">
             <label for="department">소속</label>
             <input type="text" id="department" name="department">
         </div>
         <div class="section">
-            <label for="position">직급</label>
+            <label for="position">직위</label>
             <input type="text" id="position" name="position">
         </div>
         <div class="section">
@@ -129,41 +125,21 @@
             <input type="text" id="name" name="name">
         </div>
         <div class="section">
-            <label for="leave_type">구분</label>
-            <div class="checkbox-group">
-                <label><input type="checkbox" name="leave_type" value="연차"> 연차</label>
-                <label><input type="checkbox" name="leave_type" value="반차"> 반차</label>
-            </div>
+            <p>상기 본인은 아래와 같이 휴가를 사용하고자 하오니 승인하여 주시기 바랍니다.</p>
         </div>
         <div class="section">
-            <label for="start_date">신청기간</label>
-            <input type="date" id="start_date" name="start_date">
-            <select id="start_time" name="start_time">
-                <option value="오전">오전</option>
-                <option value="오후">오후</option>
-            </select>
-            <input type="time" id="start_hour" name="start_hour">
-            <span>부터</span>
-        </div>
-        <div class="section">
-            <label for="end_date">신청기간</label>
+            <label for="start_date">휴가 기간</label>
+            <input type="date" id="start_date" name="start_date"> ~ 
             <input type="date" id="end_date" name="end_date">
-            <select id="end_time" name="end_time">
-                <option value="오전">오전</option>
-                <option value="오후">오후</option>
-            </select>
-            <input type="time" id="end_hour" name="end_hour">
-            <span>까지</span>
         </div>
         <div class="section">
-            <label for="reason">신청사유</label>
+            <label for="reason">휴가 사유</label>
             <textarea id="reason" name="reason"></textarea>
         </div>
         <div class="footer">
-            <p>위와 같은 사유로 연차/반차신청서를 제출하오니 허가하여 주시기 바랍니다.</p>
             <p id="current-date"></p>
             <p>(위 신청인) 성명: <input type="text" name="applicant_name"></p>
-            <p>주식회사 MTCAB 대표이사 귀하</p>
+            <p>주식회사 MYCAB 대표이사 귀하</p>
         </div>
     </div>
 </body>
