결재 문서 승인 후 업데이트 진행중

--- a/src/main/resources/static/사고경위서.html
+++ b/src/main/resources/static/사고경위서.html
@@ -144,6 +144,6 @@
         const day = ('0' + today.getDate()).slice(-2);
         document.getElementById('current-date').innerText = `${year}년 ${month}월 ${day}일`;
     }
-    window.onload = setDate;q
+    window.onload = setDate;
 </script>
 </html>
