--- a/src/main/resources/static/사고경위서.html
+++ b/src/main/resources/static/사고경위서.html
@@ -132,7 +132,7 @@
             <p id="current-date"></p>
         </br>
             <p>(신청인) 성명: <input type="text" name="applicant_name"></p>
-            <p>주식회사 MTCAB 대표이사 귀하</p>
+            <p>주식회사 MYCAB 대표이사 귀하</p>
         </div>
     </div>
 </body>
