--- a/src/main/resources/static/연차신청서.html
+++ b/src/main/resources/static/연차신청서.html
@@ -163,7 +163,7 @@
             <p>위와 같은 사유로 연차/반차신청서를 제출하오니 허가하여 주시기 바랍니다.</p>
             <p id="current-date"></p>
             <p>(위 신청인) 성명: <input type="text" name="applicant_name"></p>
-            <p>주식회사 MTCAB 대표이사 귀하</p>
+            <p>주식회사 MYCAB 대표이사 귀하</p>
         </div>
     </div>
 </body>
