--- a/src/main/resources/static/지출결의서.html
+++ b/src/main/resources/static/지출결의서.html
@@ -170,7 +170,7 @@
             <p>위 금액을 청구하오니 결재해 주시기 바랍니다.</p>
             <p id="current-date">2023년 월 일</p>
             <p>(위 신청인) 성명: <input type="text" name="applicant_name"></p>
-            <p>주식회사 MTCAB 대표이사 귀하</p>
+            <p>주식회사 MYCAB 대표이사 귀하</p>
         </div>
     </div>
 </body>
