--- a/src/main/resources/static/출장보고서.html
+++ b/src/main/resources/static/출장보고서.html
@@ -192,7 +192,7 @@
         <div class="footer">
             <p id="current-date">2023년 월 일</p>
             <p>(위 신청인) 성명: <input type="text" name="applicant_name"></p>
-            <p>주식회사 MTCAB 대표이사 귀하</p>
+            <p>주식회사 MYCAB 대표이사 귀하</p>
         </div>
     </div>
 </body>
